--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="section">
 		<h1><a href="models.html" target="blank"><i>Mercedes Models</i></a></h1>
-		<h1><a href="company.html" target="blank"> <i>Mercedes Company</i></a></h1>
+		<h1><a href="Company.HTML" target="blank"> <i>Mercedes Company</i></a></h1>
 		<div class="video-container">
 		<video autoplay loop muted>
 			<source src="images/fofa.mp4" type="video/mp4">
